<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <!--single: only highlight one menuItem-->
        <item
            android:id="@+id/menu"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/opt1_menu"/>
        <item
            android:id="@+id/setting"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/opt2_set"/>
        <!--<item-->
            <!--android:id="@+id/connect"-->
            <!--android:icon="@android:drawable/ic_menu_preferences"-->
            <!--android:title="@string/opt3_con"/>-->
        <item
            android:id="@+id/rename"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/opt5_rename"/>
        <item
            android:id="@+id/config"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/opt6_config"/>
        <item
            android:id="@+id/pwm"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/opt7_pwm"/>
        <item
            android:id="@+id/discover"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/opt4_dis"/>
    </group>
</menu>