<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="#FFF8DC"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >
        <Button
            android:id="@+id/bulb1"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_width="0px"
            android:text="@string/bulb1"
            android:textColor="#009900"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/normal"
            />
         <Button
            android:id="@+id/bulb2"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:text="@string/bulb2"
            android:textColor="#FF0000"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/normal"
            />
          <Button
            android:id="@+id/bulb3"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:text="@string/bulb3"
            android:textColor="#0000FF"
            android:layout_weight="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/normal"
            />
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        >
          <Button
            android:id="@+id/search"
            android:layout_height="fill_parent"
            android:layout_width="0px"
            android:text="Search"
            android:drawableLeft="@android:drawable/ic_search_category_default"
            android:textColor="#FF00FF"
            android:layout_weight="1"
            android:background="@drawable/selector_round"
            android:layout_marginRight="10dp"
			
            />
          <Button
            android:id="@+id/save_mac"
            android:layout_height="fill_parent"
            android:layout_width="0px"
            android:text="Save"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:textColor="#0099FF"
            android:layout_weight="1"
            android:background="@drawable/selector_round"
            />
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    >
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="Current\nFlux"
	        android:textColor="#000000"
	        android:textSize="8pt"
	        />
	    <TextView
	        android:id="@+id/current_flux"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/current_flux"
	        android:textColor="#000000"
	        android:textSize="8pt"
	        android:gravity="center"
	        />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="Current\nCCT"
	        android:textColor="#000000"
	        android:textSize="8pt"
	        />
	    <TextView
	        android:id="@+id/current_cct"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/current_cct"
	        android:textColor="#000000"
	        android:textSize="8pt"
	        android:gravity="center"
	        />
	    <Button
	        android:id="@+id/table_but"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/table_but"
	        />
	</LinearLayout>

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:stretchColumns="0,1,2,3"
        android:layout_weight="3"
        android:layout_gravity="center_vertical"
        android:id="@+id/table"
        >
          <TableRow
            android:background="#ECF38D">
        	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bulb"
            android:textColor="#000000"
            android:textSize="8pt"
            />
       		<TextView 
       		android:id="@+id/table_bulb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb1"
            android:textColor="#0D9736"
            android:textSize="8pt"
            />
        	<TextView 
        	android:id="@+id/table_bulb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb2"
            android:textColor="#0D9736"
            android:textSize="8pt"
            />
        	<TextView
        	android:id="@+id/table_bulb3" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb3"
            android:textColor="#0D9736"
            android:textSize="8pt"
            />
        </TableRow>
        <TableRow
            android:background="#A7F9B8">
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textColor="#000000"
            android:textSize="8pt"
            />
       		<TextView 
       		android:id="@+id/bulb1_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb1_on"
            android:textSize="8pt"
            />
        	<TextView 
        	android:id="@+id/bulb2_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb1_on"
            android:textSize="8pt"
            />
        	<TextView 
        	android:id="@+id/bulb3_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulb1_on"
            android:textSize="8pt"
            />
        </TableRow>
        <TableRow
            android:background="#ECF38D">
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Intensity"
            android:textColor="#000000"
            android:textSize="8pt"
            />
            <TextView 
            android:id="@+id/Int1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Int1" 
            android:textColor="#000000" 
            android:textSize="8pt"  
            />
            <TextView 
            android:id="@+id/Int2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Int2" 
            android:textColor="#000000" 
            android:textSize="8pt" 
            />
            <TextView 
            android:id="@+id/Int3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Int3" 
            android:textColor="#000000"  
            android:textSize="8pt" 
            />
          </TableRow>
          <TableRow
              android:background="#A7F9B8">
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Color"
            android:textColor="#000000"
            android:textSize="8pt"
            />
            <TextView 
            android:id="@+id/Color1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color1" 
            android:textColor="#000000"
            android:textSize="8pt" 
            />
            <TextView 
            android:id="@+id/Color2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color2" 
            android:textColor="#000000" 
            android:textSize="8pt"  
            />
            <TextView 
            android:id="@+id/Color3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color3" 
            android:textColor="#000000"
            android:textSize="8pt" 
            />
          </TableRow>       
    </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/Intensity"  
            android:textColor="#111111"  
            android:layout_weight="3" 
            />    
            <TextView
            android:id="@+id/Display_Intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:textSize="10pt"
            android:gravity="center"
            android:textColor="#111111"
            android:text="@string/Display_Intensity"
            /> 
            
              
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
          <Button
            android:id="@+id/dec_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt" 
            android:background="@drawable/backward"
            android:layout_weight="0"
            />
          <SeekBar 
            android:id="@+id/seekbar_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxHeight="5dp"
            android:max="22"
            />  
            <Button
            android:id="@+id/inc_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt" 
            android:layout_weight="0"
            android:background="@drawable/forward"
             />
        </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="10pt"
            android:text="@string/ColorTemperature"
            android:textColor="#000000"
            /> 
            <TextView
            android:id="@+id/Display_ColorTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10pt"
            android:gravity="center"
            android:textColor="#111111"
            android:text="@string/Display_ColorTemperature"
             />
            
              	
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
            android:id="@+id/dec_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:background="@drawable/backward"
            android:layout_weight="0"
             />
            <SeekBar 
            android:id="@+id/seekbar_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxHeight="5dp"
            android:max="42"/>
            <Button
            android:id="@+id/inc_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:background="@drawable/forward"
            android:layout_weight="0"
             />
        </LinearLayout>
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >   
        <ImageView
            android:id="@+id/bulb_display"
            android:src="@drawable/bulb_off1"    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            />        
    </LinearLayout>
    </LinearLayout>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >
        <Button
            android:id="@+id/pre1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Mode 1"
            android:layout_weight="1"
            android:textStyle="bold|italic"
            />
        <Button 
            android:id="@+id/pre2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Mode 2"
            android:layout_weight="1"
            android:textStyle="bold|italic"
            />
        <Button
            android:id="@+id/pre3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Mode 3"
            android:layout_weight="1"
            android:textStyle="bold|italic"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >
        <Button 
            android:id="@+id/button_send"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:minWidth="120dp"
            android:text="@string/send"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:drawableLeft="@drawable/send_out"
            android:textSize="14sp"
        />
        <Button
            android:id="@+id/Off"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Off"
            android:textStyle="bold"
            android:layout_weight='1'
            android:drawableLeft="@drawable/off"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/Effect"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Effect"
            android:textStyle="bold"
            android:layout_weight='1'
            android:textSize="14sp"
            android:drawableLeft="@drawable/icon"
            />
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
